--- a/templates/index.html
+++ b/templates/index.html
@@ -254,7 +254,7 @@
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#">
+                  <a href="https://www.linkedin.com/in/jaleel-jolly-589491125/">
                     <i class="fa fa-linkedin"></i>
                   </a>
                 </li>
