--- a/templates/getemailform.html
+++ b/templates/getemailform.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
-<!--
+
 <form action="" method="POST">
-email: <input type="text" name="email" value="keshvanidillon@gmail.com">
+email: <input type="text" name="email" value="simonizerha@gmail.com">
 <br>
 <input type="submit" value="Submit">
 </form>
 <p>Click the "Submit" button and the form-data will be sent to a page on the server called "/action_page.php".</p>
--->
-<p>Payment and Email sent. Please continue communication via email</p>
+
 </body>
 </html>
